--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "MoroAlberto/TntItalyApi",
+    "name": "Vi-Gu-An/TntItalyApi",
     "description": "PHP library to communicate with the TNT Italy service",
     "type": "library",
     "license": "LGPL-2.1",
